# concert-of-europe-reignited

./: .gitignore  CLAUDE.md  CoE_RoI_R.mod  README.md  check_missing_localizations.py
CoE_RoI_R/: MISSING_LOCALIZATIONS_LIST.txt
app/: LOCALISATION_FIX_PLAN.md  LOCALISATION_FIX_SUMMARY.md  README.md  analyze_localisation_diff.py  analyze_localisation_duplicates.py  bulk_remove_duplicates.py  check_duplicate_localizations.py  check_missing_localizations.py  complete_cleanup.py  conflicts_by_file_pair.md  dup_report.txt  duplicate_report_final.txt  find_text_csv_duplicates.py  fix-column-count.py  fix-csv-structure.py  fix-line-endings.py  fix-localisation.py  fix_line_endings.py  fix_localisation_duplicates.py  fix_localisation_encoding.py  fix_newstext_duplicates.py  fix_text_csv_duplicates.py  localisation_duplicate_report.md  refactor_text_csv.py  remove_0000_economic_rework_keys.txt  remove_000_crownsteler_americas_keys.txt  remove_000_crownsteler_east_indies_keys.txt  remove_000_crownsteler_non_persia_keys.txt  remove_000_persia_events_keys.txt  remove_000_persia_map_keys.txt  remove_00_FIX_event_modifiers_keys.txt  remove_00_FIX_events_P-Z_keys.txt  remove_00_FIX_modifiers_keys.txt  remove_00_FIX_triggered_modifiers_keys.txt  remove_00_PDM_GAGA_keys.txt  remove_00_PDM_countries_keys.txt  (+24 more)
app/v2lockit/: README.md  pyproject.toml
app/v2lockit/scripts/: append_handlers.py  build.py  v2lockit.spec
app/v2lockit/src/v2lockit/: __init__.py  main.py
app/v2lockit/src/v2lockit/core/: fixer.py  scanner.py  validator.py
app/v2lockit/src/v2lockit/ui/: main_window.py
(+3311 files in other folders)
